--- a/net-il-mio-fotoalbum/Views/Photo/PhotoForm.cshtml
+++ b/net-il-mio-fotoalbum/Views/Photo/PhotoForm.cshtml
@@ -12,6 +12,7 @@
     }
 </style>
 
+<!-- Table -->
 <h1 class="text-center mt-5"><strong>@ViewData["Title"]</strong></h1>
 
 <div class="card p-3 my-5">
@@ -32,9 +33,10 @@
         </div>
         <div class="form-group col-md-12">
             <label asp-for="Photo.Description">Description:</label>
-            <textarea asp-for="Photo.Description" class="form-control mt-2 @(ViewData.ModelState["Description"]?.Errors.Count > 0 ? "is-invalid" : "")"></textarea>
+            <textarea asp-for="Photo.Description" class="form-control mt-2" rows="3"></textarea>
             <span asp-validation-for="Photo.Description" class="text-danger"></span>
         </div>
+
 
         <div class="form-group col-md-12">
             <label>Categories:</label>
@@ -78,3 +80,15 @@
         </div>
     </form>
 </div>
+<!-- /Table -->
+
+<!-- Alert -->
+
+@if (TempData["ErrorMessage"] != null)
+{
+    <div id="dangerAlert" class="alert alert-danger lert-dismissible fade show" role="alert">
+        @TempData["ErrorMessage"]
+        <button id="closeAlertButton" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+<!-- /Alert -->
