--- a/net-il-mio-fotoalbum/Views/Photo/PhotoList.cshtml
+++ b/net-il-mio-fotoalbum/Views/Photo/PhotoList.cshtml
@@ -60,7 +60,7 @@
                                     <a href="@Url.Action("GetPhoto", "Photo", new { id = photo.Id })" class="text-primary mx-1"><i class="fa-regular fa-eye"></i></a>
                                     @if (User.IsInRole("Admin"))
                                     {
-                                        <a href="@Url.Action("Edit", "Photo", new { id = photo.Id })" class="text-warning mx-1"><i class="fa-regular fa-pen-to-square"></i></a>
+                                        <a href="@Url.Action("UpdatePhoto", "Photo", new { id = photo.Id })" class="text-warning mx-1"><i class="fa-regular fa-pen-to-square"></i></a>
                                         <a onclick="showDeleteModal('@Url.Action("Delete", "Photo", new { id = photo.Id })', '@photo.Title')" class="text-danger mx-1"><i class="fa-solid fa-trash-can"></i></a>
                                     }
                                 </div>
