--- a/net-il-mio-fotoalbum/Views/Shared/_Layout.cshtml
+++ b/net-il-mio-fotoalbum/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - La mia pizzeria static</title>
+    <title>@ViewData["Title"] - NET My Photo Album</title>
     
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
     <!-- Custom CSS -->
-    <link href="/css/style.css" rel="stylesheet" />
+    <link href="/css/site.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -36,18 +36,12 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a href="@Url.Action("Photographs", "Guest")" class="nav-link">Photographs</a>
                         </li>
                     </ul>
                 </div>
                  <div class="collapse navbar-collapse" id="navbarNav">
                      <ul class="navbar-nav">
-                        @if (SignInManager.IsSignedIn(User))
-                        {
-                            <li class="nav-item">
-                               <a class="nav-link" aria-current="page" href="@Url.Action("Index", "Photo")">Dashboard</a>
-                            </li>
-                        }
                         <!-- code omitted -->
                         @if (ViewData["Title"]?.ToString() != "Log in" && ViewData["Title"]?.ToString() != "Register")
                         {
@@ -58,8 +52,26 @@
             </nav>
         </div>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="wrapper">
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <aside>
+                <nav>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" aria-current="page" href="@Url.Action("Index", "Photo")">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" aria-current="page" href="@Url.Action("PhotoList", "Photo")">Photos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" aria-current="page" href="@Url.Action("Index", "Category")">Categories</a>
+                        </li>
+                    </ul>
+                </nav>
+            </aside>
+        }
+        <main role="main" class="">
             @RenderBody()
         </main>
     </div>
