--- a/net-il-mio-fotoalbum/Views/Guest/Index.cshtml
+++ b/net-il-mio-fotoalbum/Views/Guest/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1>Benvenuto sulla Home Page Pubblica</h1>
-    <p>Questa è la pagina principale a cui possono accedere tutti gli utenti, inclusi i guest.</p>
+    <h1>Welcome to the Public Home Page.</h1>
+    <p>This is the main page that all users, including guests, can access.</p>
 </div>
