--- a/net-il-mio-fotoalbum/Views/Photo/ShowPhoto.cshtml
+++ b/net-il-mio-fotoalbum/Views/Photo/ShowPhoto.cshtml
@@ -26,6 +26,6 @@
         </ul>
     </div>
     <div class="card-footer">
-        <a asp-action="PhotoList" class="btn btn-secondary">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </div>
 </div>
