--- a/net-il-mio-fotoalbum/Views/Photo/PhotoForm.cshtml
+++ b/net-il-mio-fotoalbum/Views/Photo/PhotoForm.cshtml
@@ -12,10 +12,12 @@
     }
 </style>
 
-<h1 class="text-center mt-5"><strong>@ViewData["Title"]</strong></h1>
+<h1 class="text-center mt-5"><strong>@ViewData["Title"] @ViewBag.ApplicationUserId</strong></h1>
 
 <div class="card p-3 my-5">
     <form asp-controller="Photo" asp-action="@(isEditMode ? "UpdatePhoto" : "CreatePhoto")" method="post" enctype="multipart/form-data" class="row g-3">
+        <input type="hidden" asp-for="Photo.ApplicationUserId" value="@ViewBag.ApplicationUserId" />
+        
         <div class="form-group col-md-12">
             <label asp-for="Photo.Title">Photo title:</label>
             <input asp-for="Photo.Title" class="form-control mt-2 @(ViewData.ModelState["Title"]?.Errors.Count > 0 ? "is-invalid" : "")" />
