--- a/net-il-mio-fotoalbum/Views/Photo/_deleteModal.cshtml
+++ b/net-il-mio-fotoalbum/Views/Photo/_deleteModal.cshtml
@@ -8,7 +8,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                Are you sure you want to delete the photo <strong id="photoTitleToDelete"></strong>?
+                Are you sure you want to delete the photo <strong id="categoryTitleToDelete"></strong>?
             </div>
             <div class="modal-footer" style="border-top: none;">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
