--- a/net-il-mio-fotoalbum/Views/Shared/_Layout.cshtml
+++ b/net-il-mio-fotoalbum/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -59,13 +59,10 @@
                 <nav>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" aria-current="page" href="@Url.Action("Index", "Photo")">Dashboard</a>
+                            <a class="nav-link text-dark" aria-current="page" href="@Url.Action("Index", "Photo")">Photo List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" aria-current="page" href="@Url.Action("PhotoList", "Photo")">Photos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" aria-current="page" href="@Url.Action("Index", "Category")">Categories</a>
+                            <a class="nav-link text-dark" aria-current="page" href="@Url.Action("Index", "Category")">Category List</a>
                         </li>
                     </ul>
                 </nav>
